# swap_solana_assignment

./: .gitignore  .hintrc  Anchor.toml  README.md  config-devnet.json  config.json  gitignore.production_only.example  package-lock.json  package.json  tsconfig.json
.account/: operator_test_wallet.json  operator_wallet.json  swap_solana_assignment-keypair.json  swap_state.json  swap_state_account.json
.github/workflows/: node.js.yml
programs/swap_solana_assignment/: Cargo.toml
programs/swap_solana_assignment/src/: lib.rs
scripts/: deploy.ts
swap-app/: config-overrides.js  package-lock.json  package.json  tsconfig.json
swap-app/src/: App.tsx  address_config.json
swap-app/src/idls/: idl.json
tests/: swap_solana_assignment.ts
